Added 500/400 errors for authors route
