# swagger/swagger.yaml
@@ -243,6 +243,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/authorsResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /authors/aod:
@@ -267,6 +271,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/authorOfTheDayResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /authors/aod/history:
@@ -299,6 +307,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/aodHistoryResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /authors/aod/new:
@@ -321,6 +333,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/successResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /authors/list:
@@ -365,6 +381,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/authorsResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /authors/random:
@@ -397,6 +417,10 @@ paths:
       responses:
         "200":
           $ref: '#/responses/randomAuthorResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
+        "500":
+          $ref: '#/responses/internalServerErrorResponse'
       tags:
       - AUTHORS
   /languages:
@@ -459,6 +483,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/quotesResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - QUOTES
   /quotes/list:
@@ -502,6 +528,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/quotesResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - QUOTES
   /quotes/qod:
@@ -534,6 +562,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/qodHistoryResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - QUOTES
   /quotes/qod/new:
@@ -554,6 +584,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/successResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - QUOTES
   /quotes/random:
@@ -595,6 +627,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/randomQuoteResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - QUOTES
   /search:
@@ -641,6 +675,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/quotesResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - SEARCH
   /search/authors:
@@ -686,6 +722,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/authorsResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - SEARCH
   /search/quotes:
@@ -731,6 +769,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/quotesResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - SEARCH
   /topic:
@@ -774,6 +814,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/multipleQuotesTopicResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - TOPICS
   /topics:
@@ -796,6 +838,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/listTopicsResponse'
+        "400":
+          $ref: '#/responses/incorrectBodyStructureResponse'
       tags:
       - TOPICS
 produces:
@@ -853,6 +897,28 @@ responses:
       items:
         $ref: '#/definitions/AuthorsView'
       type: array
+  incorrectBodyStructureResponse:
+    description: Data structure representing the error response to a wrongly structured
+      request body
+    schema:
+      properties:
+        message:
+          description: The error message
+          example: request body is not structured correctly.
+          type: string
+          x-go-name: Message
+      type: object
+  internalServerErrorResponse:
+    description: Data structure representing the error response to an internal server
+      error
+    schema:
+      properties:
+        message:
+          description: The error message
+          example: Please try again later.
+          type: string
+          x-go-name: Message
+      type: object
   listOfStrings:
     description: Data structure for supported languages information
     schema:
